--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.11.0"
 proc-macro2 = "1.0.66"
 quote = "1.0.33"
 syn = { version = "2.0.30", features = ["full"] }
