--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ serde_json = "1.0.111"
 noop-waker = "0.1.0"
 tokio = { version = "1.35.1", features = ["full"] }
 futures = "0.3.30"
+scopeguard = "1.2.0"
+spmc = "0.3.0"
 
 [features]
 default = []
@@ -36,7 +38,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [[example]]
-name = "anonymous_struct"
+name = "astruct"
 required-features = ["serde"]
 
 [[example]]
