--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Anonymous struct"
 repository = "https://github.com/Blindfolded18/anony.git"
 readme = "README.md"
 categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
-keywords = ["anonymous", "struct", "join", "future"]
+keywords = ["anonymous", "struct", "join", "future", "try_join"]
 
 [lib]
 proc-macro = true
