--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive-quote-to-tokens = "0.1.1"
 proc-macro2 = "1.0.94"
 quote = "1.0.40"
 syn = { version = "2.0.100", features = ["full"] }
